dataset1235/2025-2/1153765216/users/1370515670/executions/2052804200_254684124.log
== RUN (2025-09-02 19:09:34)
-- CODE: 
idade = input("digite sua idade:")

if idade >= 18
   print("maior_idade")
else 
   print("menor_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:09:00)
-- CODE: 
idade = input("digite sua idade:")

if idade>=18
   print(maior_idade)
else 
   print(menor_idade)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:09:33)
-- CODE: 
idade = input("digite sua idade:")

if idade >= 18
   print("maior_idade")
else 
   print("menor_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:22:04)
-- CODE: 
idade = int(input("digite sua idade:"))
print(idade)

if idade >= 18:
    print("maior_de_idade")
else:
    print("menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:09:24)
-- CODE: 
idade = input("digite sua idade:")

if idade>=18
   print("maior_idade")
else 
   print("menor_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:17:21)
-- CODE: 
idade = int(input("digite sua idade:"))
print(idade)

if idade >= 18:
   print("maior_de_idade")
else:
   print("menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:09:01)
-- CODE: 
idade = input("digite sua idade:")

if idade>=18
   print(maior_idade)
else 
   print(menor_idade)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:09:35)
-- CODE: 
idade = input("digite sua idade:")

if idade >= 18
   print("maior_idade")
else 
   print("menor_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:16:54)
-- CODE: 
idade = int(input("digite sua idade:"))
print(idade)

if idade >= 18:
   print("maior_de_idade")
else:
   print("menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:09:46)
-- CODE: 
idade = input("digite sua idade:")

if idade >= 18
   print("maior_idade")
else 
   print("menor_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:09:45)
-- CODE: 
idade = input("digite sua idade:")

if idade >= 18
   print("maior_idade")
else 
   print("menor_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade >= 18
                  ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:20:10)
-- CODE: 
idade = int(input("digite sua idade:"))
print (idade)

if idade >= 18:
   print("maior_de_idade")
else:
   print("menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:09:25)
-- CODE: 
idade = input("digite sua idade:")

if idade>=18
   print("maior_idade")
else 
   print("menor_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if idade>=18
                ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 12:13:23)
-- CODE: 
idade = int(input("digite sua idade:"))
print(idade)

if idade >= 18:
    print("Maior_de_idade")
else:
    print("Menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:21:57)
-- CODE: 
idade = int(input("digite sua idade:"))
print(idade)

if idade >= 18:
    print("maior_de_idade")
else:
    print("menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:16:06)
-- CODE: 
idade = int(input("digite sua idade:"))
print(idade)

if idade >= 18:
   print("maior_de_idade")
else:
   print("menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:24:23)
-- CODE: 
idade = int(input("digite sua idade:"))
print(idade)

if idade >= 18:
    print("maior_de_idade")
else:
    print("menor_de_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 19:24:24)
-- CODE: 
idade = int(input("digite sua idade:"))
print(idade)

if idade >= 18:
    print("maior_de_idade")
else:
    print("menor_de_idade")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
maior_de_idade
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 19:10:32)
-- CODE: 
idade = input("digite sua idade:")

if(idade >= 18)
   print("maior_idade")
else 
   print("menor_idade")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 3
    if(idade >= 18)
                   ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
